src/objects/SPE_SpendCoverage__c.object
<CustomObject>
    <fields>
        <fullName>ActualSpend__c</fullName>
        <formula>if (IsSPEEvaluated__c == true,  SpendNumber__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Scope Field</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSPEEvaluated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SPE Evaluated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NegoResponsible__c</fullName>
        <label>Nego Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPeriod__c</fullName>
        <label>SPE Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpendNumber__c</fullName>
        <label>Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spend__c</fullName>
        <description>Object to get spend for each supplier</description>
        <label>Spend</label>
        <referenceTo>SPE_Spend__c</referenceTo>
        <relationshipLabel>Spend Coverages</relationshipLabel>
        <relationshipName>Spend_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spend Coverages</relationshipLabel>
        <relationshipName>Spend_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestEvaluate__c</fullName>
        <label>TestEvaluate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WBSElements__c</fullName>
        <label>WBS Elements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spend Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Supplier__c</columns>
        <columns>CategoryArea__c</columns>
        <columns>CategoryGroup__c</columns>
        <columns>Category__c</columns>
        <columns>Market__c</columns>
        <columns>MarketUnit__c</columns>
        <columns>Country__c</columns>
        <columns>Project__c</columns>
        <columns>IsSPEEvaluated__c</columns>
        <columns>NegoResponsible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPC-{00000}</displayFormat>
        <label>Spend Cov Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>